# trimeshloader

./: Changelog.txt  Doxyfile  Makefile.am  Makefile.mingw  Readme.md  Readme.txt  Readme_8md.html  ToDo.txt  annotated.html  autogen.sh  classes.html  configure.in  dir_7af6704a86a2b619e6bd829e541ec647.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  group__high__level__api.html  group__low__level__3ds__api.html  group__low__level__obj__api.html  index.html  md_tutorials_tutorial1.html  md_tutorials_tutorial2.html  md_tutorials_tutorial3.html  menudata.js  modules.html  pages.html  structtlMaterial.html  structtlMaterialReference.html  structtlObject.html  structtlTrimesh.html  test.vcproj  tl3ds_8h.html  tl3ds_8h_source.html  tlobj_8h.html  tlobj_8h_source.html  (+9 more)
include/: Makefile.am
include/trimeshloader/: Makefile.am  tl3ds.h  tlobj.h  trimeshloader.h
src/: Makefile.am  tl3ds.c  tlobj.c  trimeshloader.c
test/: Makefile  test.3ds.h  test.c  test.obj.h
trimeshinfo/: trimeshinfo.c
tutorials/: tutorial1.md  tutorial2.md  tutorial3.md
