AC_PREREQ(2.62)
AC_INIT(trimeshloader, 1.0.0, post@geromueller.de)
AC_CONFIG_SRCDIR([src/trimeshloader.c])
AC_CONFIG_HEADERS([config.h])
LT_INIT

# ------------------------------------------------
# setup versions
# ------------------------------------------------
TL_MAJOR_VERSION=0
TL_MINOR_VERSION=1
TL_EXTRA_VERSION=0
LT_VERSION=0:1:0

TL_LIB_VERSION=$TL_MAJOR_VERSION.$TL_MINOR_VERSION
TL_VERSION=$TL_MAJOR_VERSION.$TL_MINOR_VERSION.$TL_EXTRA_VERSION
AC_SUBST(LT_VERSION)
AC_SUBST(TL_MAJOR_VERSION)
AC_SUBST(TL_MINOR_VERSION)
AC_SUBST(TL_EXTRA_VERSION)
AC_SUBST(TL_LIB_VERSION)
AC_SUBST(TL_VERSION)

# ------------------------------------------------
# Checks for debug options
# ------------------------------------------------
AM_MAINTAINER_MODE

enable_debug=no
if test x$USE_MAINTAINER_MODE = xyes; then
	enable_debug=yes
fi

debug_default=$enable_debug
AC_MSG_CHECKING(whether to enable debug mode)
AC_ARG_ENABLE(debug, [  --enable-debug=[no/yes] turn on debugging [default=$debug_default]],, enable_debug=$debug_default)
if test "x$enable_debug" = "xyes"; then
	CFLAGS="-g3 -O0 -DDEBUG -pedantic -Wall"
	AC_MSG_RESULT(yes)
else
	CFLAGS="-O3 -ffast-math"
	AC_MSG_RESULT(no)
fi

# ------------------------------------------------
# Checks for programs.
# ------------------------------------------------
AM_INIT_AUTOMAKE(trimeshloader,$TL_VERSION)
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

# ------------------------------------------------
# Checks for dependencies
# ------------------------------------------------
AC_CHECK_HEADERS([stdlib.h])

AC_OUTPUT([
Makefile
src/Makefile
include/Makefile
include/trimeshloader/Makefile
trimeshloader.pc
])
